View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032677 | Open CASCADE | OCCT:Coding | public | 2021-11-22 01:47 | 2023-02-03 04:58 |
Reporter | kgv | Assigned To | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 5.2.4 | ||||
Target Version | 7.7.0 | Fixed in Version | 7.7.0 | ||
Summary | 0032677: Coding Rules, Geom_BezierSurface - eliminate GCC warning -Wmaybe-uninitialized -fsanitize=undefined | ||||
Description | The following warning should be fixed:In function ‘void AddRatPoleRow(const TColgp_Array2OfPnt&, const TColStd_Array2OfReal&, const TColgp_Array1OfPnt&, const TColStd_Array1OfReal&, Standard_Integer, TColgp_Array2OfPnt&, TColStd_Array2OfReal&)’, inlined from ‘void Geom_BezierSurface::InsertPoleRowAfter(Standard_Integer, const TColgp_Array1OfPnt&)’ at ../../../../src/Geom/Geom_BezierSurface.cxx:751:19: ../../../../src/Geom/Geom_BezierSurface.cxx:242:53: warning: ‘*_293 + _996’ may be used uninitialized [-Wmaybe-uninitialized] 242 | NewWeights (RowIndex, ColIndex) = PoleWeightRow (ColIndex - OffsetW); | ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~ for the following code: // TColStd_Array1OfReal CWeights(nweights->LowerCol(),nweights->UpperCol(), // 1.0); ??????????? TColStd_Array1OfReal CWeights(1.0, nweights->LowerCol(),nweights->UpperCol()); | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | N/A | ||||
|
Branch CR32677 has been created by kgv. SHA-1: 3e7c1e5624a60fb1218d6fff80a5cc7dc61f2059 Detailed log of new commits: Author: kgv Date: Mon Nov 22 01:54:20 2021 +0300 0032677: Coding Rules, Geom_BezierSurface - eliminate GCC warning -Wmaybe-uninitialized -fsanitize=undefined Fixed initialization of TColStd_Array1OfReal for weights. |
|
Patch is ready for review - OCCT: branch CR32677. http://jenkins-test-occt.nnov.opencascade.com/view/CR32677-master-KGV/ |
|
For integration: occt - CR32677 products - none |
|
Combination - OCCT branch : IR-2021-11-26 master SHA - 4a837ecec21bfe24d9c224c4b59aa9779156f297 49e51745631c52b6c452c65adae4d6dfa21a1b1e Products branch : IR-2021-11-26 SHA - 5da5872bffc6c1fa745ee5e33ac09c4fffd349b4 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 18390.380000000398 / 18549.650000000624 [-0.86%] Products Total CPU difference: 11648.280000000103 / 11661.570000000122 [-0.11%] Windows-64-VC14: OCCT Total CPU difference: 19927.859375 / 19945.046875 [-0.09%] Products Total CPU difference: 13059.03125 / 13091.625 [-0.25%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR32677 has been deleted by mnt. SHA-1: 3e7c1e5624a60fb1218d6fff80a5cc7dc61f2059 |
occt: master d62df471 2021-11-21 22:54:20 Committer: |
0032677: Coding Rules, Geom_BezierSurface - eliminate GCC warning -Wmaybe-uninitialized -fsanitize=undefined Fixed initialization of TColStd_Array1OfReal for weights. |
Affected Issues 0032677 |
|
mod - src/Geom/Geom_BezierSurface.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2021-11-22 01:47 | kgv | New Issue | |
2021-11-22 01:47 | kgv | Assigned To | => kgv |
2021-11-22 01:54 | git | Note Added: 0105334 | |
2021-11-22 08:10 | kgv | Test case number | => N/A |
2021-11-22 08:10 | kgv | Note Added: 0105342 | |
2021-11-22 08:10 | kgv | Assigned To | kgv => msv |
2021-11-22 08:10 | kgv | Status | new => resolved |
2021-11-22 08:11 | kgv | Product Version | 7.5.0 => 6.5.0 |
2021-11-22 15:38 |
|
Note Added: 0105351 | |
2021-11-22 15:38 |
|
Assigned To | msv => bugmaster |
2021-11-22 15:38 |
|
Status | resolved => reviewed |
2021-11-22 15:42 | kgv | Product Version | 6.5.0 => 5.2.4 |
2021-11-27 14:23 |
|
Note Added: 0105460 | |
2021-11-27 14:23 |
|
Status | reviewed => tested |
2021-11-27 14:52 |
|
Changeset attached | => occt master d62df471 |
2021-11-27 14:52 |
|
Assigned To | bugmaster => smoskvin |
2021-11-27 14:52 |
|
Status | tested => verified |
2021-11-27 14:52 |
|
Resolution | open => fixed |
2021-11-27 15:04 | git | Note Added: 0105485 | |
2023-02-03 04:57 | vglukhik | Status | verified => closed |
2023-02-03 04:58 | vglukhik | Fixed in Version | => 7.7.0 |