0032677: Coding Rules, Geom_BezierSurface - eliminate GCC warning -Wmaybe-uninitialized -fsanitize=undefined

Fixed initialization of TColStd_Array1OfReal for weights.